--- a/package.json
+++ b/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "jonsu",
+  "name": "nextjs-starter",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cypress:open": "cypress open",
+    "tslint": "tslint -p . -c tslint.json"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "i18next": "^20.2.2",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.8.15"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "cypress": "^7.3.0",
+    "prettier": "^2.3.0",
+    "tslint": "^6.1.3",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-react-hooks": "^2.2.2",
+    "typescript": "^4.2.4"
   }
 }
